--- a/Survey Form/index.html
+++ b/Survey Form/index.html
@@ -6,5 +6,57 @@
     <link rel="stylesheet" href="style.css" />
     <title>Survey Form</title>
   </head>
-  <body></body>
+  <body>
+    <h1 id="title">title</h1>
+    <p id="description">description</p>
+
+    <form id="survey-form">
+      <label id="name-label"
+        >name:
+        <input type="text" id="name" placeholder="Please enter your name.."
+      /></label>
+      <label id="email-label"
+        >email:
+        <input
+          type="email"
+          placeholder="Please enter your email.."
+          pattern="/^\w+([\.-]?\w+)*@\w+([\.-]?\w+)*(\.\w{2,3})+$/"
+          id="email"
+      /></label>
+      <label id="number-label"
+        >number:
+        <input
+          type="number"
+          placeholder="please enter your number.."
+          id="number"
+          min="6"
+          max="12"
+      /></label>
+
+      <select id="dropdown">
+        <option>select one</option>
+        <option>cat</option>
+        <option>dog</option>
+      </select>
+
+      <label><input type="radio" name="radio-option" /> A</label>
+      <label><input type="radio" name="radio-option" /> B</label>
+      <label><input type="radio" name="radio-option" /> C</label>
+      <label><input type="radio" name="radio-option" /> D</label>
+
+      <label><input type="checkbox" value="white" />white</label>
+      <label><input type="checkbox" value="black" />black</label>
+
+      <textarea
+        placeholder="Please be free to add extra data"
+        rows="10"
+        cols="60"
+      >
+      </textarea>
+
+      <input type="submit" value="Submit" />
+    </form>
+  </body>
 </html>
+
+<!-- Inside the form element, you are presented with a button with id of submit to submit all the inputs -->
