--- a/17. Product Landing Page 💠/index.html
+++ b/17. Product Landing Page 💠/index.html
@@ -44,39 +44,55 @@
       </fieldset>
     </form>
 
-    <!-- <main>
+    <main>
       <div class="features">
         <div>
-          <i class="fa-solid fa-fire-flame-curved"></i>
-          <h2>Premium Materials</h2>
-          <p>
-            Our trombones use the shiniest brass which is sourced locally. This
-            will increase the longevity of your purchase.
-          </p>
+            <div class="flex-wrapper">
+                <div class="icons">
+                    <div>
+                        <i class="fa-solid fa-fire-flame-curved"></i>
+                    </div>
+                    <div>
+                        <i class="fa-solid fa-truck"></i>
+                    </div>
+                    <div>
+                        <i class="fa-solid fa-battery-full"></i>
+                    </div>
+                </div>
+                <div>
+                    <div>
+                        <h2>Premium Materials</h2>
+                        <p>
+                          Our trombones use the shiniest brass which is sourced locally. This
+                          will increase the longevity of your purchase.
+                        </p>
+                      </div>
+                      <div>
+                        <h2>Fast Shipping</h2>
+                        <p>
+                          We make sure you recieve your trombone as soon as we have finished
+                          making it. We also provide free returns if you are not satisfied.
+                        </p>
+                      </div>
+                      <div>
+                        <h2>Quality Assurance</h2>
+                        <p>
+                          For every purchase you make, we will ensure there are no damages or
+                          faults and we will check and test the pitch of your instrument.
+                        </p>
+                      </div>
+                </div>
+            </div>
+          
         </div>
-        <div>
-          <i class="fa-solid fa-truck"></i>
-          <h2>Fast Shipping</h2>
-          <p>
-            We make sure you recieve your trombone as soon as we have finished
-            making it. We also provide free returns if you are not satisfied.
-          </p>
-        </div>
-        <div>
-          <i class="fa-solid fa-battery-full"></i>
-          <h2>Quality Assurance</h2>
-          <p>
-            For every purchase you make, we will ensure there are no damages or
-            faults and we will check and test the pitch of your instrument.
-          </p>
-        </div>
+        
       </div>
 
       <div class="how-it-works">
         <iframe
           id="video" id="video"
           width="600"
-          height="350"
+          height="370"
           src="https://www.youtube.com/embed/y8Yv4pnO7qc"
           title="Roman Carnival Overture Op. 9 for Five Trombones"
           frameborder="0"
@@ -114,7 +130,7 @@
           <button>select</button>
         </div>
       </div>
-    </main> -->
+    </main>
 
     <!-- <footer>
       <ul>
