:sparkles: Add pricing section

--- a/17. Product Landing Page 💠/index.html
+++ b/17. Product Landing Page 💠/index.html
@@ -102,27 +102,27 @@
       </div>
 
       <div class="pricing">
-        <div>
+        <div class="block">
           <h2>tenor trombone</h2>
-          <p>$600</p>
+          <p class="price">$600</p>
           <p>lorem ipsum.</p>
           <p>lorem ipsum.</p>
           <p>lorem ipsum dolor.</p>
           <p>lorem ipsum.</p>
           <button>select</button>
         </div>
-        <div>
+        <div class="block">
           <h2>bass trombone</h2>
-          <p>$900</p>
+          <p class="price">$900</p>
           <p>lorem ipsum.</p>
           <p>lorem ipsum.</p>
           <p>lorem ipsum dolor.</p>
           <p>lorem ipsum.</p>
           <button>select</button>
         </div>
-        <div>
+        <div class="block">
           <h2>valve trombone</h2>
-          <p>$1200</p>
+          <p class="price">$1200</p>
           <p>plays similar to a trumpet.</p>
           <p>great for JaZZ bands.</p>
           <p>lorem ipsum dolor.</p>
