:sparkles: Update readme file image

--- a/17. Product Landing Page 💠/index.html
+++ b/17. Product Landing Page 💠/index.html
@@ -34,6 +34,7 @@
       <fieldset>
         <legend>handcrafted, home-made masterpieces</legend>
         <input
+          name="email"
           id="email"
           type="email"
           placeholder=" Enter your email address"
