--- a/20. Personal Portfolio 💠/index.html
+++ b/20. Personal Portfolio 💠/index.html
@@ -7,6 +7,80 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+
+    <header>
+        <nav id="navbar">
+            <ul>
+                <li>
+                    <a href="#welcome-section">about</a>
+                </li>
+                <li>
+                    <a href="#projects">work</a>
+                </li>
+                <li>
+                    <a href="#contact">contact</a>
+                </li>
+            </ul>
+        </nav>
+    </header>
+
+    <main>
+
+        <section id="welcome-section">
+            <div>
+                <div>
+                    <h1>Hey I am Mimic</h1>
+                    <p>a web developer</p>
+                </div>
+            </div>
+           
+         </section>
+         <!-- <section id="projects">
+          <h2>These are some of my projects</h2>
+          <figure>
+             <img src="" alt=""/>
+             <figcaption class="project-title">project title</figcaption>
+          </figure>
+          <figure>
+             <img src="" alt=""/>
+             <figcaption class="project-title">project title</figcaption>
+          </figure>
+          <figure>
+             <img src="" alt=""/>
+             <figcaption class="project-title">project title</figcaption>
+          </figure>
+          <figure>
+             <img src="" alt=""/>
+             <figcaption class="project-title">project title</figcaption>
+          </figure>
+          <figure>
+             <img src="" alt=""/>
+             <figcaption class="project-title">project title</figcaption>
+          </figure>
+          <figure>
+             <img src="" alt=""/>
+             <figcaption class="project-title">project title</figcaption>
+          </figure>
+          <button>show all</button>
+         </section> -->
+         <!-- <section id="contact">
+         <h2>Let's work together</h2>
+         <p>How do you take your coffee</p>
+         <div>
+             <p><a href="#">Facebook</a></p>
+             <p><a href="#" id="profile-link" target="_blank">GitHub</a></p>
+             <p><a href="#">Twitter</a></p>
+             <p><a href="#">Send a email</a></p>
+             <p><a href="#">Call me</a></p>
+         </div>
+         </section> -->
+
+    </main>
+   
+    <!-- <footer id="footer">
+        <p>**This is just a fake portfolio. All the projects and contact details given are not real.</p>
+        <p>© Created for freeCodeCamp</p>
+    </footer> -->
+
 </body>
 </html>
