:sparkles: Finish projects section

--- a/20. Personal Portfolio 💠/index.html
+++ b/20. Personal Portfolio 💠/index.html
@@ -1,69 +1,154 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Personal Portfolio</title>
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
-
+    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+  </head>
+  <body>
     <header>
-        <nav id="navbar">
-            <ul>
-                <li>
-                    <a href="#welcome-section">about</a>
-                </li>
-                <li>
-                    <a href="#projects">work</a>
-                </li>
-                <li>
-                    <a href="#contact">contact</a>
-                </li>
-            </ul>
-        </nav>
+      <nav id="navbar">
+        <ul>
+          <li>
+            <a href="#welcome-section">about</a>
+          </li>
+          <li>
+            <a href="#projects">work</a>
+          </li>
+          <li>
+            <a href="#contact">contact</a>
+          </li>
+        </ul>
+      </nav>
     </header>
 
     <main>
+      <section id="welcome-section">
+        <div>
+          <div>
+            <h1>Hey I am Mimic</h1>
+            <p>a web developer</p>
+          </div>
+        </div>
+      </section>
+      <section id="projects">
+        <h2>These are some of my projects</h2>
+        <div class="grid-wrapper">
+          <div class="projects-images">
+            <figure>
+              <a
+                href="https://codepen.io/freeCodeCamp/full/zNqgVx"
+                target="_blank"
+              >
+                <img
+                  src="https://cdn.freecodecamp.org/testable-projects-fcc/images/tribute.jpg"
+                  alt="project 1"
+              /></a>
+              <a
+                href="https://codepen.io/freeCodeCamp/full/zNqgVx"
+                target="_blank"
+              >
+                <figcaption class="project-title">tribute page</figcaption>
+              </a>
+            </figure>
+            <figure>
+              <a
+                href="https://codepen.io/freeCodeCamp/full/qRZeGZ"
+                target="_blank"
+              >
+                <img
+                  src="https://cdn.freecodecamp.org/testable-projects-fcc/images/random-quote-machine.png"
+                  alt="project 2"
+                />
+              </a>
+              <a
+                href="https://codepen.io/freeCodeCamp/full/qRZeGZ"
+                target="_blank"
+              >
+                <figcaption class="project-title">
+                  random quote machine
+                </figcaption>
+              </a>
+            </figure>
+            <figure>
+              <a
+                href="https://codepen.io/freeCodeCamp/full/wgGVVX"
+                target="_blank"
+              >
+                <img
+                  src="https://cdn.freecodecamp.org/testable-projects-fcc/images/calc.png"
+                  alt="project 3"
+              /></a>
+              <a
+                href="https://codepen.io/freeCodeCamp/full/wgGVVX"
+                target="_blank"
+              >
+                <figcaption class="project-title">
+                  javascript calculator
+                </figcaption></a
+              >
+            </figure>
+            <figure>
+              <a
+                href="https://codepen.io/freeCodeCamp/full/mVEJag"
+                target="_blank"
+              >
+                <img
+                  src="https://cdn.freecodecamp.org/testable-projects-fcc/images/map.jpg"
+                  alt="project 4"
+              /></a>
+              <a
+                href="https://codepen.io/freeCodeCamp/full/mVEJag"
+                target="_blank"
+              >
+                <figcaption class="project-title">
+                  map data across the globe
+                </figcaption>
+              </a>
+            </figure>
+            <figure>
+              <a
+                href="https://codepen.io/freeCodeCamp/full/wGqEga"
+                target="_blank"
+              >
+                <img
+                  src="https://cdn.freecodecamp.org/testable-projects-fcc/images/wiki.png"
+                  alt="project 5"
+              /></a>
+              <a
+                href="https://codepen.io/freeCodeCamp/full/wGqEga"
+                target="_blank"
+              >
+                <figcaption class="project-title">
+                  wikipeadia viewer
+                </figcaption></a
+              >
+            </figure>
+            <figure>
+              <a
+                href="https://codepen.io/freeCodeCamp/full/KzXQgy"
+                target="_blank"
+              >
+                <img
+                  src="https://cdn.freecodecamp.org/testable-projects-fcc/images/tic-tac-toe.png"
+                  alt="project 6"
+                />
+              </a>
+              <a
+                href="https://codepen.io/freeCodeCamp/full/KzXQgy"
+                target="_blank"
+              >
+                <figcaption class="project-title">tic tac toe game</figcaption>
+              </a>
+            </figure>
+          </div>
+        </div>
 
-        <section id="welcome-section">
-            <div>
-                <div>
-                    <h1>Hey I am Mimic</h1>
-                    <p>a web developer</p>
-                </div>
-            </div>
-           
-         </section>
-         <!-- <section id="projects">
-          <h2>These are some of my projects</h2>
-          <figure>
-             <img src="" alt=""/>
-             <figcaption class="project-title">project title</figcaption>
-          </figure>
-          <figure>
-             <img src="" alt=""/>
-             <figcaption class="project-title">project title</figcaption>
-          </figure>
-          <figure>
-             <img src="" alt=""/>
-             <figcaption class="project-title">project title</figcaption>
-          </figure>
-          <figure>
-             <img src="" alt=""/>
-             <figcaption class="project-title">project title</figcaption>
-          </figure>
-          <figure>
-             <img src="" alt=""/>
-             <figcaption class="project-title">project title</figcaption>
-          </figure>
-          <figure>
-             <img src="" alt=""/>
-             <figcaption class="project-title">project title</figcaption>
-          </figure>
-          <button>show all</button>
-         </section> -->
-         <!-- <section id="contact">
+        <button><a href="https://codepen.io/FreeCodeCamp/">Show all</a></button>
+      </section>
+      <!-- <section id="contact">
          <h2>Let's work together</h2>
          <p>How do you take your coffee</p>
          <div>
@@ -74,13 +159,11 @@
              <p><a href="#">Call me</a></p>
          </div>
          </section> -->
-
     </main>
-   
+
     <!-- <footer id="footer">
         <p>**This is just a fake portfolio. All the projects and contact details given are not real.</p>
         <p>© Created for freeCodeCamp</p>
     </footer> -->
-
-</body>
+  </body>
 </html>
