:sparkles: Finish footer

--- a/20. Personal Portfolio 💠/index.html
+++ b/20. Personal Portfolio 💠/index.html
@@ -164,9 +164,10 @@
          </section>
     </main>
 
-    <!-- <footer id="footer">
+    <footer id="footer">
         <p>**This is just a fake portfolio. All the projects and contact details given are not real.</p>
-        <p>© Created for freeCodeCamp</p>
-    </footer> -->
+        <p>© Created for freeCodeCamp <a href="https://www.freecodecamp.org/" target="_blank"><i class="fa-brands fa-free-code-camp"></i></a></p>
+    </footer>
+
   </body>
 </html>
